2000-12-14 Szabolcs Ban <shooby@gnome.hu>

	* gda-sybase-error.c: s/Fetchong/Fetching/

2000-11-27 Holger Thon <holger.thon@gnome-db.org>

	