@@ -49,7 +49,7 @@ sybase_Command;
 
 gboolean gda_sybase_command_new (GdaServerCommand * cmd);
 GdaServerRecordset *gda_sybase_command_execute (GdaServerCommand * cmd,
-						GdaServerError * error,
+						GdaError * error,
 						const GDA_CmdParameterSeq *
 						params, gulong * affected,
 						gulong options);
